unpackaged/main/default/objects/Service_Type__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contract ID</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Service Types</relationshipLabel>
    <relationshipName>Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>