unpackaged/main/default/objects/Service_Type__c/fields/Duration_in__c.field-meta.xml
<CustomField>
    <fullName>Duration_in__c</fullName>
    <label>Duration In:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>