unpackaged/main/default/objects/Service_Type__c/fields/Guided_Selection__c.field-meta.xml
<CustomField>
    <fullName>Guided_Selection__c</fullName>
    <label>Guided Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Build Support</fullName>
            </value>
            <value>
                <fullName>Escort</fullName>
            </value>
            <value>
                <fullName>Inside Plant</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Locating Services</fullName>
            </value>
            <value>
                <fullName>Outside Plant</fullName>
            </value>
            <value>
                <fullName>PMR</fullName>
            </value>
            <value>
                <fullName>Radio Frequency</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>