unpackaged/main/default/objects/Service_Type__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <length>5</length>
    <type>Text</type>
</CustomField>