unpackaged/main/default/objects/Service_Type__c/recordTypes/Contract_ID.recordType-meta.xml
<RecordType>
    <fullName>Contract_ID</fullName>
    <active>true</active>
    <label>Contract ID</label>
</RecordType>