unpackaged/main/default/objects/Service_Type__c/recordTypes/Job_Type.recordType-meta.xml
<RecordType>
    <fullName>Job_Type</fullName>
    <active>true</active>
    <label>Job Type</label>
</RecordType>