unpackaged/main/default/objects/Service_Type__c/recordTypes/Service_Type.recordType-meta.xml
<RecordType>
    <fullName>Service_Type</fullName>
    <active>true</active>
    <label>Service Type</label>
</RecordType>