unpackaged/main/default/objects/Service_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Guided_Selection__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contract_ID__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Duration__c</columns>
    <columns>Duration_in__c</columns>
    <columns>SOW__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>