unpackaged/main/default/objects/Service_Type__c/listViews/Contract_ID.listView-meta.xml
<ListView>
    <fullName>Contract_ID</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Type__c.Contract_ID</value>
    </filters>
    <label>Contract ID</label>
</ListView>