unpackaged/main/default/objects/Service_Type__c/listViews/Job_Type.listView-meta.xml
<ListView>
    <fullName>Job_Type</fullName>
    <columns>NAME</columns>
    <columns>Contract_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Type__c.Job_Type</value>
    </filters>
    <label>Job Type</label>
</ListView>