unpackaged/main/default/objects/Service_Type__c/listViews/Service_Type.listView-meta.xml
<ListView>
    <fullName>Service_Type</fullName>
    <columns>NAME</columns>
    <columns>Guided_Selection__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Contract_ID__c</columns>
    <columns>Duration__c</columns>
    <columns>SOW__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Type__c.Service_Type</value>
    </filters>
    <label>Service Type</label>
</ListView>